# stack-base

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
app/cli/: app.py
app/generator/: __init__.py  project_generator.py
app/infrastructure/: project_reader.py
app/models/: __init__.py  detect_project.py  project_config.py  spring_mvc.py
app/ui/: application.py  console.py  stack_base.tcss
app/ui/screens/: about_screen.py  create_screen.py  home_screen.py  templates_screen.py
app/validation/: detection_rules_java_spring.py  project_detector.py
app/workflow/: __init__.py  open_project_workflow.py  spring_mvc_workflow.py
docs/: devsecops-oneflow.md  templates.md
tests/integration/: test_cli.py  test_spring_mvc_cli.py
tests/unit/: test_project_generator.py  test_project_validator.py  test_spring_mvc_workflow.py
