[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "stack-base"
version = "0.1.0"
description = "CLI for generating, standardizing and validating software projects."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

authors = [
    { name = "Matheus Assunção da Cunha" }
]

dependencies = [
    "typer>=0.16,<1.0",
    "rich>=13.0,<15.0",
    "textual"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=6.0,<8.0",
    "ruff>=0.12,<1.0"
]

[project.scripts]
stackbase = "app.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"